progression rate vignette edited

--- a/vignettes/progression-rate-analysis.Rmd
+++ b/vignettes/progression-rate-analysis.Rmd
@@ -7,7 +7,7 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r, echo=FALSE, warning=FALSE}
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 library(dplyr)
 library(magrittr)
 ```
