--- a/vignettes/active_tb_imputation.bib
+++ b/vignettes/active_tb_imputation.bib
@@ -1,3 +1,20 @@
+@article{Sutherland1982,
+abstract = {Information on the risk of tuberculous infection in the, Netherlands has been linked with information on the incidence of tuberculosis, in an attempt to estimate the risks of developing the disease following infection or reinfection. It was postulated that:o(a)those with a recent primary infection had a characteristic risk of developing progressive primary tuberculosis ;(b)those with a distant (i.e. not recent) primary infection and a recent reinfection had a characteristic risk of developing exogenous tuberculosis ; and(c)those with a distant primary infection but no recent reinfection had a characteristic risk of developing endogenous tuberculosis. The information on the risk of tuberculous infection was used to estimate the size of the population in each of these infection classes for different age-groups and calendar years in the Netherlands. Using multiple regression to link these population figures with the information on tuberculosis incidence in the same age group and calendar year, it was possible to estimate the above risks of developing tuberculosis. For Netherlands males aged 15–69 years during the period 1951-70 the three risks of developing pulmonary tuberculosis were estimated to be:o(a)5.06 per cent annually (for 5 years) following primary infection ;(b)1.91 per cent annually (for 5 years) following reinfection;(c)0.0253 per cent annually, after the first 5 years following primary infection, in the absence of reinfection. The corresponding (and significantly different) estimated annual risks of development of pulmonary tuberculosis for females were 5.85,1,10 and 0.0020 per cent respectively. From these risks, it may be estimated that the degree of protection conferred by a distant primary infection, against pulmonary tuberculosis arising from a recent reinfection, was 63 per cent for males and 81 per cent for females. The estimated relative proportions of cases of progressive primary, exogenous and endogenous tuberculosis varied considerably with age and calendar year. Progressive primary tuberculosis was dominant at the younger ages, exogenous and endogenous tuberculosis at older ages. At these older ages, the great majority of cases in the Netherlands in the early 1950s appeared to be exogenous in origin, but by 1970, with the decrease in the risk of infection, the exogenous contribution had dwindled substantially, especially among males. L'information concernant le risque d'infection tuberculeuse aux Pays-Bas a {\'{e}}t{\'{e}} mise en relation avec celle concernant l'incidence de la tuberculose, afin d'essayer d'estimer les risques de voir {\'{e}}voluer la maladie {\`{a}} la suite de l'infection ou de la re-infection. On a postul{\'{e}} que:o(a)les sujets r{\'{e}}cemment infect{\'{e}}s pour la premi{\`{e}}re fois poss{\'{e}}daient un risque caract{\'{e}}ristique de voir {\'{e}}voluer une tuberculose primaire progressive ;(b)les sujets infect{\'{e}}s pour la premi{\`{e}}re fois depuis longtemps (c'est {\`{a}} dire dont l'infection n'{\'{e}}tait pas r{\'{e}}cente) poss{\'{e}}daient un risque caract{\'{e}}ristique de voir {\'{e}}voluer une tuberculose d'origine exog{\`{e}}ne ;(c)les sujets infect{\'{e}}s pour la premi{\`{e}}re fois depuis longtemps et n'ayant pas subi une re-infection r{\'{e}}cente poss{\'{e}}daient un risque caract{\'{e}}ristique de voir {\'{e}}voluer une tuberculose d'origine endog{\`{e}}ne. L'information sur le' risque d'infection tuberculeuse a {\'{e}}t{\'{e}} utilis{\'{e}}e pour estimer le volume de population dans chacune, de ces classes d'infection aux Pays-Bas. En reliant ces chiffres de population aux rensie gnements concernant l'incidence de la tuberculose dans le m{\^{e}}me groupe d'{\^{a}}ge et la m{\^{e}}me ann{\'{e}}e, il a {\'{e}}t{\'{e}} possible d'estimer les diff{\'{e}}rents risques ci-dessus de voir {\'{e}}voluer une tuberculose. On a 3insi estim{\'{e}} qu'aux Pays-Bas pour les hommes {\^{a}}g{\'{e}}s de 15-69 ans au cours de la p{\'{e}}riode 1951–70, les trois risques de voir {\'{e}}voluer une tuberculose pulmonaire {\'{e}}taient les suivants:o(a)5,06 {\%} par an (pendant 5 ans) {\`{a}} la suite de l'infection primaire ;(b)1,91 {\%} par an (pendant 5 ans) {\`{a}} la suite de la re-infection ;(c)0,0253{\%} par an, au del{\`{a}} des 5 premi{\`{e}}res ann{\'{e}}es suivant l'infection primaire, en absence de re-infection. Chez la femme, les risques annuels estim{\'{e}}s correspondants (et significativement diff{\'{e}}rents) de voir {\'{e}}voluer une tuberculose pulmonaire {\'{e}}taient de 5,85, 1,10 et 0,0020 {\%} respectivement dans les 3 cat{\'{e}}gories ci-dessus. A partir de ces risques, on peut estimer que le degr{\'{e}} de protection conf{\'{e}}r{\'{e}} par une primo infection ancienne vis-{\`{a}}-vis d'une tuberculose pulmonaire {\'{e}}voluant {\`{a}} partir d'une re-infection r{\'{e}}cente {\'{e}}tait de 63 {\%} pour les hommes et de 81 {\%} pour les femmes. Les proportions estim{\'{e}}es relatives de cas de tuberculose progressive primaire, exog{\`{e}}ne et endog{\`{e}}ne variaient {\'{e}}norm{\'{e}}ment selon l'{\^{a}}ge et l'ann{\'{e}}e consid{\'{e}}r{\'{e}}s. La tuberculose primaire progressive pr{\'{e}}dominait aux {\'{a}}ges les plus jeunes et les tuberculoses exog{\`{e}}ne et endog{\`{e}}ne aux {\^{a}}ges les plus avanc{\'{e}}s. Il est apparu qu'{\`{a}} ces {\^{a}}ges avanc{\'{e}}s, la grande majorit{\'{e}} des cas aux Pays-Bas au d{\'{e}}but des ann{\'{e}}es 50 avaient une origine exog{\`{e}}ne mais aux environs de 1970, avec la r{\'{e}}gression du risque d'infection, l'apport exog{\`{e}}ne a substantiellement diminu{\'{e}}, en particulier dans le sexe masculin. La informaci{\'{o}}n sobre el riesgo de infecci{\'{o}}n tuberculosa en Holanda fue puesta en relaci{\'{o}}n aqu{\'{e}}lla concerniente a la incidencia de la tuberculosis, en un intento de estimar el riesgo de desarrollar la enfermedad despu{\'{e}}s de la infecci{\'{o}}n o reinfecci{\'{o}}n. Se hab{\'{i}}an planteado las posibilidades siguientes :o(a)los sujetos con una infecci{\'{o}}n primaria reciente se caracterizaban por tener un riesgo de desarrollar una tuberculosis primaria progresiva ;(b)los sujetos con una infecci{\'{o}}n primaria lejana (es decir no reciente) y una reinfecci{\`{o}}n reciente, se caracterizaban por tener un riesgo de desarrollar una tuberculosis ex{\'{o}}gena; y(c)los sujetos con una infecci{\'{o}}n primaria lejana y sin reinfecci{\'{o}}n{\^{}}reciente se caracterizaban por tener un riesgo de desarrollar una tuberculosis end{\'{o}}gena. La informaci{\'{o}}n sobre el riesgo de infecci{\'{o}}n tuberculosa se utiliz{\'{o}} en Holanda para estimar la magnitud de la poblaci{\'{o}}n en cada uno de estos tipos de infecci{\'{o}}n, para los diferentes grupos de edades y a{\~{n}}os-calendario. Las cifras correspondientes a estas poblaciones puestas en relaci{\'{o}}n con la informaci{\'{o}}n sobre la incidencia de la tuberculosis en los mismos grupos de edad y a{\~{n}}os-calendario, permitieron estimar los riesgos de desarrollar tuberculosis, encionados m{\'{a}}s arriba. Para la poblaci{\'{o}}n holandesa de sexo masculino de edades ente 15 y 69 a{\~{n}}os, durante el per{\'{i}}odo 1951-70, los tres riesgos de desarrollar una tuberculosis pulmonar fueron :o(a)5.06 {\%} anual (para 5 a{\~{n}}os) despu{\'{e}}s de una infecci{\'{o}}n primaria ;(b)1.91 {\%}anual (para 5 a{\~{n}}os) despu{\'{e}}s de una reinfecci{\'{o}}n;(c)0.0253 {\%} anual, despu{\'{e}}s de los primeros 5 a{\~{n}}os que siguieron a la infecci{\'{o}}n primaria en ausencia do reinfecci{\'{o}}n. La estimaci{\'{o}}n de los riesgos respectivos (y significativamente diferentes) correspondientes a la poblaci{\'{o}}n de sexo femenino fue la siguiente : 5.85 {\%}, 1.10 {\%} y 0.0020 {\%}. A partir de estos riesgos se pudo estimar que el grado de protecci{\'{o}}n conferido por una infecci{\'{o}}n primaria lejana, contra una tuberculosis pulmonar producida por una reinfecci{\'{o}}n{\^{}}reciente, era de 63 {\%} para los hombres y 81 {\%} para las mujeres. Las proporciones relativas estimadas de casos de tuberculosis, primaria, progresiva, ex{\'{o}}gena y end{\'{o}}gena vari{\'{o}} considerablemente con la edad y el a{\~{n}}o-calendario. La tuberculosis primaria progresiva fue dominante en los grupos m{\'{a}}s j{\'{o}}venes y la tuberculosis ex{\'{o}}gena y end{\'{o}}gena en los grupos de edad m{\'{a}}s avanzada. En estos grupos de edad m{\'{a}}s avanzada, en Holanda, a comienzos de los a{\~{n}}os 50, la gran mayor{\'{i}}a de los casos parec{\'{i}}a no tener un origen ex{\'{o}}geno, pero alrededor de 1970, con la disminuci{\'{o}}n del riesgo de infecci{\'{o}}n, la contribuci{\'{o}}n de las formas ex{\'{o}}genas se ha hecho mucho menos importante, en especial en la poblaci{\'{o}}n masculina.},
+author = {Sutherland, Ian and {\v{S}}vandov{\'{a}}, Eva and Radhakrishna, S.},
+doi = {10.1016/S0041-3879(82)80013-5},
+file = {:C$\backslash$:/Users/ngreen1/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Sutherland, {\v{S}}vandov{\'{a}}, Radhakrishna - 1982 - The development of clinical tuberculosis following infection with tubercle bacilli.pdf:pdf},
+isbn = {0041-3879 (Print)$\backslash$r0041-3879 (Linking)},
+issn = {00413879},
+journal = {Tubercle},
+keywords = {18th Century,20th Century,Adolescent,Adult,Age Factors,Aged,Biological,Epidemiologic Methods,Female,History,Humans,Male,Middle Aged,Models,Netherlands,Pulmonary,Recurrence,Risk,Sex Factors,Tuberculosis,epidemiology,etiology,history},
+number = {4},
+pages = {255--268},
+pmid = {6763793},
+title = {{The development of clinical tuberculosis following infection with tubercle bacilli}},
+url = {http://www.sciencedirect.com/science/article/pii/S0041387982800135},
+volume = {63},
+year = {1982}
+}
 @article{Marks2000a,
 author = {Marks, Suzanne M and Taylor, Zachary and Qualls, Noreen L and Shrestha-kuwahara, Robin J and Wilce, Maureen A and Nguyen, Cristy H},
 pages = {2033--2038},
@@ -31,4 +48,21 @@ pages = {390--395},
 title = {{The outcome of a cohort of tuberculin-positive predominantly South Asian new entrants aged 16 – 34 to the UK : Blackburn 1989 – 2001}},
 volume = {36},
 year = {2013}
+}
+@article{Aldridge2016,
+abstract = {Background Tuberculosis elimination in countries with a low incidence of the disease necessitates multiple interventions, including innovations in migrant screening. We examined a cohort of migrants screened for tuberculosis before entry to England, Wales, and Northern Ireland and tracked the development of disease in this group after arrival. Methods As part of a pilot pre-entry screening programme for tuberculosis in 15 countries with a high incidence of the disease, the International Organization for Migration screened all applicants for UK visas aged 11 years or older who intended to stay for more than 6 months. Applicants underwent a chest radiograph, and any with results suggestive of tuberculosis underwent sputum testing and culture testing (when available). We tracked the development of tuberculosis in those who tested negative for the disease and subsequently migrated to England, Wales, and Northern Ireland with the Enhanced Tuberculosis Surveillance system. Primary outcomes were cases of all forms of tuberculosis (including clinically diagnosed cases), and bacteriologically confirmed pulmonary tuberculosis. Findings Our study cohort was 519???955 migrants who were screened for tuberculosis before entry to the UK between Jan 1, 2006, and Dec 31, 2012. Cases notified on the Enhanced Tuberculosis Surveillance system between Jan 1, 2006, and Dec 31, 2013, were included. 1873 incident cases of all forms of tuberculosis were identified, and, on the basis of data for England, Wales, and Northern Ireland, the estimated incidence of all forms of tuberculosis in migrants screened before entry was 147 per 100???000 person-years (95{\%} CI 140???154). The estimated incidence of bacteriologically confirmed pulmonary tuberculosis in migrants screened before entry was 49 per 100???000 person-years (95{\%} CI 45???53). Migrants whose chest radiographs were compatible with active tuberculosis but with negative pre-entry microbiological results were at increased risk of tuberculosis compared with those with no radiographic abnormalities (incidence rate ratio 3??2, 95{\%} CI 2??8???3??7; p{\textless}0??0001). Incidence of tuberculosis after migration increased significantly with increasing WHO-estimated prevalence of tuberculosis in migrants' countries of origin. 35 of 318???983 pre-entry screened migrants included in a secondary analysis with typing data were assumed index cases. Estimates of the rate of assumed reactivation tuberculosis ranged from 46 (95{\%} CI 42???52) to 91 (82???102) per 100???000 population. Interpretation Migrants from countries with a high incidence of tuberculosis screened before being granted entry to low-incidence countries pose a negligible risk of onward transmission but are at increased risk of tuberculosis, which could potentially be prevented through identification and treatment of latent infection in close collaboration with a pre-entry screening programme. Funding Wellcome Trust, UK National Institute for Health Research, UK Medical Research Council, Public Health England, and Department of Health Policy Research Programme.},
+author = {Aldridge, Robert W. and Zenner, Dominik and White, Peter J. and Williamson, Elizabeth J. and Muzyamba, Morris C. and Dhavan, Poonam and Mosca, Davide and Thomas, H. Lucy and Lalor, Maeve K. and Abubakar, Ibrahim and Hayward, Andrew C.},
+doi = {10.1016/S0140-6736(16)31008-X},
+file = {:C$\backslash$:/Users/ngreen1/Google Drive/docs/1-s2.0-S014067361631008X-main.pdf:pdf;:C$\backslash$:/Users/ngreen1/Google Drive/docs/1-s2.0-S0140673616317032-main.pdf:pdf;:C$\backslash$:/Users/ngreen1/Google Drive/docs/incidence - supplementary material 16 1 29.docx:docx},
+isbn = {0140-6736},
+issn = {1474547X},
+journal = {The Lancet},
+number = {10059},
+pages = {2510--2518},
+pmid = {27742165},
+publisher = {The Author(s). Published by Elsevier Ltd. This is an Open Access article under the CC BY license},
+title = {{Tuberculosis in migrants moving from high-incidence to low-incidence countries: a population-based cohort study of 519 955 migrants screened before entry to England, Wales, and Northern Ireland}},
+url = {http://dx.doi.org/10.1016/S0140-6736(16)31008-X},
+volume = {388},
+year = {2016}
 }
